# Embed-Papers

./: .gitignore  README.md  neurips_2025_conference.json  pyproject.toml
.github/workflows/: build-wheel.yml  release-wheel.yml
src/embed_papers/: __init__.py  cache_paths.py  cli.py  crawler.py  exceptions.py  models.py  retry.py  searcher.py
src/embed_papers/viewer/: app.py
tests/: test_cache_behavior.py  test_cli_contract.py  test_crawler.py  test_display.py  test_host_command.py  test_retries.py
